<resources>
    <string name="app_name">Interlogias</string>
    <string name="api_key">AIzaSyD3rSFjCrYs-jvk-PoOUABXzEAhv47J2bU</string>
    <string name="entrar">entrar</string>
    <string name="user_name">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="no_tienes_cuenta">¿aun no tienes cuenta?</string>
    <string name="haz_click_aqui">haz click aqui</string>
    <string name="nombre">NOMBRE</string>
    <string name="email">EMAIL</string>
    <string name="crear_cuenta">crear cuenta</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="ocultar">OCULTAR</string>
    <string name="action_settings">ajustes</string>
    <string name="acepto_terminos">Acepto los terminos y condiciones</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="contacto">CONTACTO</string>
    <string name="r_e_a_y_a">R.∙.E.∙.A.∙.Y.∙.A.∙.</string>
    <string name="r_d_y">YORK RITE</string>
    <string name="r_n_m">R.∙.N.∙.M.∙.</string>
    <string name="r_n_i">R.∙.N.∙.I.∙.</string>
    <string name="did_you_forget">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password">Recuperar Contraseña</string>
    <string name="enter_email">Ingrese su correo electrónico</string>
    <string name="your_email">Tu correo electrónico</string>
    <string name="reset_pass">Restablecer mi contraseña</string>
    <string name="directions">¿COMO LLEGAR?</string>
    <string name="asunto">ASUNTO</string>
    <string name="mensaje">MENSAJE</string>
    <string name="enviar">ENVIAR</string>
</resources>
