<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo"
        android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColorHint="@color/blanco"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/user_name"
            android:padding="5dp"
            android:background="@drawable/round_corners"
            android:drawableStart="@drawable/ic_skull"
            android:drawablePadding="25dp"
            android:inputType="" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_username"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColorHint="@color/blanco"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/password"
            android:textColor="@color/blanco"
            android:padding="10dp"
            android:background="@drawable/round_corners"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="25dp" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:layout_below="@id/edt_password"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/entrar"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/txt_no_tienes_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/btn_map"
            android:textAllCaps="true"
            android:text="@string/no_tienes_cuenta"
            android:textSize="16sp"
            android:textColor="@color/blanco"/>

        <TextView
            android:id="@+id/txt_haz_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/txt_no_tienes_cuenta"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/haz_click_aqui"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/blanco"/>

    </RelativeLayout>

</ScrollView>