<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.activities.RegistroActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corners"
        android:drawablePadding="25dp"
        android:drawableStart="@drawable/ic_skull"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="9dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco"
        app:layout_constraintBottom_toTopOf="@+id/btn_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/edt_contraseña"
        style=""
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corners"
        android:drawablePadding="25dp"
        android:drawableStart="@drawable/ic_key"
        android:drawableTint="@color/blanco"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco"
        app:layout_constraintBottom_toTopOf="@+id/btn_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/edt_correo"
        style=""
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corners"
        android:drawablePadding="25dp"
        android:drawableStart="@drawable/ic_mail"
        android:drawableTint="@color/blanco"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco"
        app:layout_constraintBottom_toTopOf="@+id/btn_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contraseña"
        app:layout_constraintVertical_bias="0.087" />

    <CheckBox
        android:id="@+id/check_accepto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/blanco"
        android:text="@string/acepto_terminos"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toTopOf="@+id/btn_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_correo"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_crear_cuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_btn"
        android:text="@string/crear_cuenta"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintVertical_bias="0.951" />

</android.support.constraint.ConstraintLayout>